# video_factory

./: .env.example  .gitignore  AGENTS.md  CLEANUP_REPORT.txt  CONTEXT.md  Caddyfile.snippet  Documento_Alineacion_Antigravity_vs_Clean_Score_Jump.md  INTEGRATION_SUMMARY.txt  MANUAL_STARTUP.md  README.md  RUNBOOK_CONSOLE_VPS.md  airtable_strategy.md  debug_beat_config.py  debug_fix.py  demo_llm_client.py  dummy_bible.md  load_env.sh  main.py  manifest_post_ingest.json  manifest_post_planning.json  migrate_db.py  migrate_progress.py  pyproject.toml  requirements.txt  run_manifest_after_ingest.json  run_manifest_after_planning.json  run_validation.py  run_with_mock_audio.py  setup_vps.sh  stage1.md  stage2.md  stage3.md  stage4.md  start_cockpit.sh  startup.md  test_agent.py  test_agent_env.py  test_cache.py  test_llm_integration.py  test_qa.py  (+6 more)
Project-1-TheCleanScoreJump/: SCRIPT.md  biblia_de_estilo_visual_hintsly_lab_final_lock.md
config/: shot_menu.yaml
configs/: config.yaml
context/: ARCHITECTURE.md  CONTRACTS.md  FinanceVideoPlatform — System Flow & Business Logic (LOCKED_ Clean Score Jump).md  HU.md  HU_EPIC_E0_Fundaciones.md  HU_EPIC_E1_Agents_Layer.md  T-101.md  T-102.md  T-103.md  TICKETS_IMPLEMENTATION.md  Tickets_Hito1_RUN_Skeleton.md  flow.md  gui.md  project_roadmap.md  reqs_backend_api.md  reqs_db_schema.md  reqs_frontend_ui.md  reqs_pipeline_integration.md
doc/: veo_doc.md
docs/: LLM_CLIENT_GUIDE.md
helpers/: fix_vps_deployment.sh
inputs_test/: invalid_bible.md  valid_bible.md
scripts/: initialize_run.py  recover_run_9059.py  test_preflight.py  (+1 more)
(+101 files in other folders)
